@@ -11,3 +11,6 @@ dependencies {
   api("dev.minutest:minutest:1.13.0")
   api("io.mockk:mockk:1.10.5")
 }
+tasks.withType(Test).configureEach{
+  jvmArgs = ['--add-opens=java.base/sun.net=ALL-UNNAMED']
+}
